--- a/zklang/background.tex
+++ b/zklang/background.tex
@@ -15,12 +15,15 @@
 
 \maketitle
 
+This document is based on Efficient Zero-Knowledge Proofs and Applications \footnote{\url{https://uwspace.uwaterloo.ca/bitstream/handle/10012/8621/Henry_Ryan.pdf
+}}
+ 
+
 \section{Terminology}
 
-Some preliminary concepts need to be defined; a basic understanding of set theory and number theory is required, set theory~\footnote{\url{https://en.wikipedia.org/wiki/Set-builder_notation}\newline \url{https://www.tutorialspoint.com/discrete_mathematics/discrete_mathematics_relations.htm}\newline \url{https://www.tutorialspoint.com/discrete_mathematics/discrete_mathematics_functions.htm}} and group theory~\footnote{\url{https://www.tutorialspoint.com/discrete_mathematics/discrete_mathematics_group_theory.htm}} is required. 
+\textit{Some preliminary concepts need to be defined; a basic understanding of set theory \footnote{\url{https://en.wikipedia.org/wiki/Set-builder_notation}\newline \url{https://www.tutorialspoint.com/discrete_mathematics/discrete_mathematics_relations.htm}\newline \url{https://www.tutorialspoint.com/discrete_mathematics/discrete_mathematics_functions.htm}}, modular arithematic\footnote{\url{https://en.wikipedia.org/wiki/Modular_arithmetic}} and group theory~\footnote{\url{https://www.di-mgt.com.au/multiplicative-group-mod-p.html}} is required.} 
 \newline
-
-Throughout, $\mathbb{G}$ will always denote a finite multiplicative group with  \(\tau\)-bit prime order \emph{q} and a fixed generator \emph{g}\(\in\)$\mathbb{G}$ and $\mathbb{G}^{*}$ = $\mathbb{G}$ \ensuremath{\backslash} \{1\} will refer to its subset of non-identity elements. Likewise, $\mathbb{Z}_q$ will denote the field of integers modulo \emph{q}, and $\mathbb{Z}^{*}_q$ = $\mathbb{Z}_q$ \ensuremath{\backslash} \{0\} will refer to its multiplicative group of units.
+Throughout, $\mathbb{G}$ will always denote a finite multiplicative group with \(\tau\)-bit prime order \emph{q} (\emph{q} is prime with \(\tau\) bits so $ 2^{\tau - 1} <= q < 2^{\tau} $) and a fixed generator \emph{g}\(\in\)$\mathbb{G}$ and $\mathbb{G}^{*}$ = $\mathbb{G}$ \ensuremath{\backslash} \{1\} will refer to its subset of non-identity elements (order \emph{q-1}). Likewise, $\mathbb{Z}_q$ will denote the field of integers modulo \emph{q} (order \emph{q}), and $\mathbb{Z}^{*}_q$ = $\mathbb{Z}_q$ \ensuremath{\backslash} \{0\} will refer to its multiplicative group of units (order \emph{q-1}).
 \newline
 \newline
 If \(\Lambda\) is a finite set, then the set of all length-n sequences of elements from \(\Lambda\) is denoted by \(\Lambda^n\) and the set of all finite sequences (of any finite, non-negative length) of elements from \(\Lambda\) is denoted by \(\Lambda^{*}\) = \( \bigcup_{n\in\mathbb{N}} \)\(\Lambda^n\). The sequences in \(\Lambda^{*}\) are called finite strings over the alphabet \(\Lambda\) and subsets of \(\Lambda^{*}\) are called languages of strings over \(\Lambda\). Let \textit{S} and \textit{W} be arbitrary languages over \(\Lambda\). A collection of ordered pairs \textit{R} \(\subseteq\) \textit{S} \(\times\) \textit{W} is a (binary) relation on strings from \(\Lambda^{*}\). We call the language of strings \textit{$L_R$} {=} \{ \textit{s} $\in$ \textit{S} \(\mid\) \(\exists\)w $\in$ \textit{W}, \textit{(s, w)} $\in$ \textit{R} \} the language induced by \textit{R}. We treat \textit{R(s , w)} as a function evaluating to 1 if \textit{(s, w)} $\in$ \textit{R} and to 0 otherwise. If \textit{R(s, w)} = 1, then the string w is called a witness that s $\in$ \textit{$L_R$}. Given a string s $\in$ S, the set \textit{$W_R$(s)} = \{ \textit{w} $\in$ W $\mid$ \textit{R(s, w)} = 1 \}  is called the witness set for s $\in$ \textit{$L_R$}. Of course, \textit{$W_R$(s)} = \{\} if s $(\notin)$ \textit{$L_R$}.
