added member predicate for accmulators and lists

--- a/idemix-middlelayer-spec/HL-buildingblocks.tex
+++ b/idemix-middlelayer-spec/HL-buildingblocks.tex
@@ -16,7 +16,8 @@ Terms that the language supports are the following ones.
 &\NIZK\lbrace(): \operatorname{SNym}( \emph{nym}, \mathit{scope}) \rbrace\\
 &\NIZK\lbrace(m): \operatorname{Enc}( \emph{epk}, m, \mathit{ctxt}) \rbrace\\
 &\NIZK\lbrace(m): \operatorname{Larger}(m, c) \rbrace\\
-&\NIZK\lbrace(m): \operatorname{Smaller}(m, c) \rbrace
+&\NIZK\lbrace(m): \operatorname{Smaller}(m, c) \rbrace \\
+&\NIZK\lbrace(m): \operatorname{Member}(m, c) \rbrace
 \end{align}
 
 
