fix bib in zklang

--- a/zklang/ZKLangSpecification.tex
+++ b/zklang/ZKLangSpecification.tex
@@ -408,7 +408,7 @@ such that the token is not linkable to the credentials on which it is based.
 
 \newpage
 \bibliographystyle{alpha}
-\bibliography{idemix-spec-3.0.36/repageba,idemix-spec-3.0.36/biche,references}
+\bibliography{../idemix-middlelayer-spec/idemix-spec-3.0.36/repageba,../idemix-middlelayer-spec/idemix-spec-3.0.36/biche,references}
 
 %\newpage
 %\input{appendix}
