WIP Proving doc

--- a/zklang/background.tex
+++ b/zklang/background.tex
@@ -23,16 +23,16 @@ This document is based on Efficient Zero-Knowledge Proofs and Applications \foot
 
 \textit{Some preliminary concepts need to be defined; a basic understanding of set theory \footnote{\url{https://en.wikipedia.org/wiki/Set-builder_notation}\newline \url{https://www.tutorialspoint.com/discrete_mathematics/discrete_mathematics_relations.htm}\newline \url{https://www.tutorialspoint.com/discrete_mathematics/discrete_mathematics_functions.htm}}, modular arithematic\footnote{\url{https://en.wikipedia.org/wiki/Modular_arithmetic}} and group theory~\footnote{\url{https://www.di-mgt.com.au/multiplicative-group-mod-p.html}} is required.} 
 \newline
-Throughout, $\mathbb{G}$ will always denote a finite multiplicative group with \(\tau\)-bit prime order \emph{q} (\emph{q} is prime with \(\tau\) bits so $ 2^{\tau - 1} <= q < 2^{\tau} $) and a fixed generator \emph{g}\(\in\)$\mathbb{G}$ and $\mathbb{G}^{*}$ = $\mathbb{G}$ \ensuremath{\backslash} \{1\} will refer to its subset of non-identity elements (order \emph{q-1}). Likewise, $\mathbb{Z}_q$ will denote the field of integers modulo \emph{q} (order \emph{q}), and $\mathbb{Z}^{*}_q$ = $\mathbb{Z}_q$ \ensuremath{\backslash} \{0\} will refer to its multiplicative group of units (order \emph{q-1}).
+Throughout, $\mathbb{G}$ will always denote a finite multiplicative group prime order \emph{q} and a fixed generator \emph{g}\(\in\)$\mathbb{G}$ and $\mathbb{G}^{*}$ = $\mathbb{G}$ \ensuremath{\backslash} \{1\} will refer to its subset of non-identity elements (order \emph{q-1}). Likewise, $\mathbb{Z}_q$ will denote the field of integers modulo \emph{q} (order \emph{q}), and $\mathbb{Z}^{*}_q$ = $\mathbb{Z}_q$ \ensuremath{\backslash} \{0\} will refer to its multiplicative group of units (order \emph{q-1}).
 \newline
 \newline
 If \(\Lambda\) is a finite set, then the set of all length-n sequences of elements from \(\Lambda\) is denoted by \(\Lambda^n\) and the set of all finite sequences (of any finite, non-negative length) of elements from \(\Lambda\) is denoted by \(\Lambda^{*}\) = \( \bigcup_{n\in\mathbb{N}} \)\(\Lambda^n\). The sequences in \(\Lambda^{*}\) are called finite strings over the alphabet \(\Lambda\) and subsets of \(\Lambda^{*}\) are called languages of strings over \(\Lambda\). Let \textit{S} and \textit{W} be arbitrary languages over \(\Lambda\). A collection of ordered pairs \textit{R} \(\subseteq\) \textit{S} \(\times\) \textit{W} is a (binary) relation on strings from \(\Lambda^{*}\). We call the language of strings \textit{$L_R$} {=} \{ \textit{s} $\in$ \textit{S} \(\mid\) \(\exists\)w $\in$ \textit{W}, \textit{(s, w)} $\in$ \textit{R} \} the language induced by \textit{R}. We treat \textit{R(s , w)} as a function evaluating to 1 if \textit{(s, w)} $\in$ \textit{R} and to 0 otherwise. If \textit{R(s, w)} = 1, then the string w is called a witness that s $\in$ \textit{$L_R$}. Given a string s $\in$ S, the set \textit{$W_R$(s)} = \{ \textit{w} $\in$ W $\mid$ \textit{R(s, w)} = 1 \}  is called the witness set for s $\in$ \textit{$L_R$}. Of course, \textit{$W_R$(s)} = \{\} if s $(\notin)$ \textit{$L_R$}.
 \newline
 An algorithm whether it be deterministic or probabilistic is efficient if its expected running time is polynomial in the length of its inputs.
 \newline
-Throughout, we assume that there are efficient algorithms to test membership of arbitrary strings in \textit{S} and \textit{W} so that identifying instances for \textit{R} is easy. 
+Throughout, it is assumed that there are efficient algorithms to test membership of arbitrary strings in \textit{S} and \textit{W} so that identifying instances for \textit{R} is easy. 
 \newline
-We make no assumptions about the ease or difficulty of testing membership of a string s in \textit{L\textsubscript{R}} when no appropriate witness w $\in$ \textit{W\textsubscript{R}(s)} has been provided.
+No assumption is made about the ease or difficulty of testing membership of a string s in \textit{L\textsubscript{R}} when no appropriate witness w $\in$ \textit{W\textsubscript{R}(s)} has been provided.
 \newline
 \newline
 \textit{NP-relations and NP-languages}. A language \textit{$L_R$} is called an NP-language if it belongs to the complexity class NP\footnote{\url{https://stackoverflow.com/q/1857244}}; that is, if (i) there exists an efficient algorithm to evaluate \textit{R(s, w)} on any instance \textit{(s,w)} $\in$ \textit{S $\times$ W}, and (ii) there exists a polynomial time function \emph{p(n)} such that every s $\in$ \textit{$L_R$} has at least one witness w $\in$ \textit{$W_R$(s)} satisfying $|w|\leq p(|s|)$.
