--- a/zklang/proving.tex
+++ b/zklang/proving.tex
@@ -26,5 +26,17 @@ As per CS notation\footnote{Proof Systems for General Statements about Discrete 
 \newline
 Since sigma protocols work only for honest verifiers, an approach to handle potentially dishonest verifiers is not using any input from the verifer; using  non-interactive proofs. Using Fiat Shamir transform the 2nd step of above sigma protocol where the verifier sends a challenge can be ommitted. Instead the prover calcualtes a challenge using a hash function.
 \section{Proving knowledge}
-
+TODO
+\section{CL sigs}
+TODO
+\section{CL sigs - revelation}
+TODO
+\section{CL sigs - opening commitment}
+TODO
+\section{CL sigs - range proofs}
+TODO
+\section{CL sigs - set membership}
+TODO
+\section{CL sigs - verifiable encryption}
+TODO
 \end{document}
