Have main that includes subsections and assignments

--- a/zklang/zklang.bib
+++ b/zklang/zklang.bib
@@ -9,3 +9,8 @@
   publisher = {{IEEE} Computer Society},
   year      = {2013}
 }
+@misc{mathsymbolswiki,
+  author = {Wikipedia},
+  title = {List of mathmatical symbols},
+  howpublished = {\url{https://en.wikipedia.org/wiki/List_of_mathematical_symbols}}
+}
